# core-data-covid-project-data-loader

./: .editorconfig  .env.example  README.md  pyproject.toml  setup.cfg
covid_data/: __init__.py  app.py  errors.py  logger.py  types.py
covid_data/commands/: fix_locations.py  load_csv.py  test_load_csv.py
covid_data/db/: __init__.py  queries.py  test_queries.py
covid_data/db/schema/: db_schema.psql  db_schema.sql
covid_data/scrappers/: france.py  spain.py
covid_data/test_utils/: __init__.py
covid_data/utils/: __init__.py  components_mapping.py  places.py
data/: confirmed_global.csv  deaths_global.csv  recovered_global.csv
