[tool.poetry]
name = "core-data-covid-project"
version = "0.1.0"
description = "Data loader part of the mid-project for the Data Science bootcamp from Core Code School"
authors = ["Ale Sanchez <alesanchezmedina@gmail.com>"]
license = "The Unlicense"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.0"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
